-
Bug
-
Resolution: Done
-
P2: Important
-
5.15.0
-
c71d1c363ed97f9c169251ecf53975634c3c5522, 4e645c7c33b03adf2d9161b00d00267add0aa373
Make it possible to set the grouped properties for DelegateModel declaratively, currently this is not possible as it cannot be set until after the item is created. If you try to set it declaratively then it will fail with:
qrc:/main.qml:34:27: Cannot assign to non-existent property "inPersistedItems"
For Gerrit Dashboard: QTBUG-86045 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
376167,4 | QQmlDelegateModelAttached: Make static properties statically known | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
376168,4 | DelegateModel: Document limitation of groups derived attached properties | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |